--- a/app/views/authors/explicit_dependence.html.erb
+++ b/app/views/authors/explicit_dependence.html.erb
@@ -10,7 +10,7 @@
         <p>name: <%= @author.name %></p>
         
         <%# Template Dependency: authors/big_age %>
-        <%# Template Dependency: authors/small_age %>
+        <%# Template Dependency: authors/samll_age %>
         <p><%= render_diff_by_age(@author) %></p>
       </div>
     </div>
