--- a/app/views/authors/home_list.html.erb
+++ b/app/views/authors/home_list.html.erb
@@ -9,79 +9,89 @@
 <div class="jumbotron">
   <h1 class="display-4">分享主题：rails缓存</h1>
   <hr class="my-4">
-  <button class="btn  btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample5" aria-expanded="false" aria-controls="collapseExample">
+  <button class="btn  btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">
     1.配置缓存
   </button>
 
-  <div class="collapse" id="collapseExample5">
+  <div class="collapse" id="collapseExample1">
     <ul class="list-group">
       <li class="list-group-item"><%= link_to '配置缓存', 'https://github.com/dongmy54/learn-note/blob/develop/rails/%E7%BC%93%E5%AD%98/config.md', target: '_blank',class: 'btn btn-warning' %></li>
     </ul>
   </div>
 
-  <button class="btn  btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+  <button class="btn  btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
     2.片段缓存
-  </button>
-
-  <div class="collapse" id="collapseExample">
-    <ul class="list-group">
-      <li class="list-group-item"><%= link_to '片段缓存：不指定键', frag_test_authors_path, class: 'btn btn-warning' %></li>
-      <li class="list-group-item"><%= link_to '片段缓存: 对象键', frag_test1_authors_path, class: 'btn btn-warning' %></li>
-      <li class="list-group-item"><%= link_to '片段缓存: 对象数组', frag_test2_authors_path, class: 'btn btn-warning' %></li>
-      <li class="list-group-item"><%= link_to '片段缓存：过期时间', frag_test3_authors_path, class: 'btn btn-warning' %></li>
-      <li class="list-group-item"><%= link_to '片段缓存: 集合(去test_app 5.0)', frag_test4_authors_path, class: 'btn btn-warning' %></li>
-    </ul>
-  </div>
-
-  <button class="btn  btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="false" aria-controls="collapseExample">
-    3.俄罗斯套娃缓存
-  </button>
-  
-  <div class="collapse" id="collapseExample1">
-    <ul class="list-group">
-      <li class="list-group-item"><%= link_to '俄罗斯套娃缓存: 不使用存在问题', russia_cache_authors_path, class: 'btn btn-warning' %></li>
-      <li class="list-group-item"><%= link_to '俄罗斯套娃缓存', russia_cache1_authors_path, class: 'btn btn-warning' %></li>
-    </ul>
-  </div>
-
-  <button class="btn btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample">
-    4.sql缓存
   </button>
 
   <div class="collapse" id="collapseExample2">
     <ul class="list-group">
-      <li class="list-group-item"><%= link_to 'sql缓存', sql_cache_authors_path, class: 'btn btn-warning' %></li>
+      <li class="list-group-item"><%= link_to '片段缓存：不指定键', frag_test_authors_path, target: '_bank', class: 'btn btn-warning' %></li>
+      <li class="list-group-item"><%= link_to '片段缓存: 对象键', frag_test1_authors_path, target: '_bank', class: 'btn btn-warning' %></li>
+      <li class="list-group-item"><%= link_to '片段缓存: 对象数组', frag_test2_authors_path, target: '_bank', class: 'btn btn-warning' %></li>
+      <li class="list-group-item"><%= link_to '片段缓存：过期时间', frag_test3_authors_path, target: '_bank', class: 'btn btn-warning' %></li>
+      <li class="list-group-item"><%= link_to '片段缓存: 集合(去test_app 5.0)', frag_test4_authors_path, target: '_bank', class: 'btn btn-warning' %></li>
     </ul>
   </div>
 
-  <button class="btn btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
-    5.条件get缓存
+  <button class="btn  btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
+    3.俄罗斯套娃缓存
   </button>
-
+  
   <div class="collapse" id="collapseExample3">
     <ul class="list-group">
-      <li class="list-group-item"><%= link_to '条件get请求', condition_get_author_path(id: 303), class: 'btn btn-warning' %></li>
-      <li class="list-group-item"><%= link_to '条件get请求: 传对象', condition_get1_author_path(id: 303), class: 'btn btn-warning' %></li>
-      <li class="list-group-item"><%= link_to '条件get请求：fresh_when', condition_get_author_path(id: 303), class: 'btn btn-warning' %></li>
+      <li class="list-group-item"><%= link_to '俄罗斯套娃缓存: 不使用存在问题', russia_cache_authors_path, target: '_bank', class: 'btn btn-warning' %></li>
+      <li class="list-group-item"><%= link_to '俄罗斯套娃缓存', russia_cache1_authors_path, target: '_bank', class: 'btn btn-warning' %></li>
     </ul>
   </div>
 
   <button class="btn btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample">
-    6.片段缓存使用helper问题
+    4.sql缓存
   </button>
 
   <div class="collapse" id="collapseExample4">
     <ul class="list-group">
-      <li class="list-group-item"><%= link_to '显示依赖', explicit_dependence_author_path(id: 303), class: 'btn btn-warning' %></li>
-      <li class="list-group-item"><%= link_to '外部依赖', external_dependence_author_path(id: 304), class: 'btn btn-warning' %></li>
+      <li class="list-group-item"><%= link_to 'sql缓存', sql_cache_authors_path, target: '_bank', class: 'btn btn-warning' %></li>
+    </ul>
+  </div>
+  
+  <button class="btn btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample5" aria-expanded="false" aria-controls="collapseExample">
+    5.底层缓存
+  </button>
+
+  <div class="collapse" id="collapseExample5">
+    <ul class="list-group">
+      <li class="list-group-item"><h6>rails c中演示</h6></li>
     </ul>
   </div>
 
   <button class="btn btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample6" aria-expanded="false" aria-controls="collapseExample">
-    7.其它
+    6.条件get缓存
   </button>
 
   <div class="collapse" id="collapseExample6">
+    <ul class="list-group">
+      <li class="list-group-item"><%= link_to '条件get请求', condition_get_author_path(id: 303), target: '_bank', class: 'btn btn-warning' %></li>
+      <li class="list-group-item"><%= link_to '条件get请求: 传对象', condition_get1_author_path(id: 304), target: '_bank', class: 'btn btn-warning' %></li>
+      <li class="list-group-item"><%= link_to '条件get请求：fresh_when', condition_get2_author_path(id: 305), target: '_bank', class: 'btn btn-warning' %></li>
+    </ul>
+  </div>
+
+  <button class="btn btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample7" aria-expanded="false" aria-controls="collapseExample">
+    7.片段缓存使用helper问题
+  </button>
+
+  <div class="collapse" id="collapseExample7">
+    <ul class="list-group">
+      <li class="list-group-item"><%= link_to '显示依赖', explicit_dependence_author_path(id: 303), target: '_bank', class: 'btn btn-warning' %></li>
+      <li class="list-group-item"><%= link_to '外部依赖', external_dependence_author_path(id: 304), target: '_bank', class: 'btn btn-warning' %></li>
+    </ul>
+  </div>
+
+  <button class="btn btn-n btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample8" aria-expanded="false" aria-controls="collapseExample">
+    8.其它
+  </button>
+
+  <div class="collapse" id="collapseExample8">
     <ul class="list-group">
       <li class="list-group-item"><h6>缓存键： cache_key</h6></li>
       <li class="list-group-item"><h6>清除缓存：Rails.cache.clear</h6></li>
