--- a/app/views/authors/external_dependence.html.erb
+++ b/app/views/authors/external_dependence.html.erb
@@ -10,7 +10,7 @@
         <p>name: <%= @author.name %></p>
         <p>age:<%= @author.age %></p>
 
-        <%# Helper Dependency Update: 2019.12.12 %>
+        <%# Helper Dependency Updated: 2019.12.13 14:38 %>
         <%= some_method %>
       </div>
     </div>
