--- a/app/views/authors/condition_get.html.erb
+++ b/app/views/authors/condition_get.html.erb
@@ -1,5 +1,5 @@
 <h3>条件get请求</h3>
-<p>浏览器中缓存，利用http请求头 条件请求头 If-None-Match（etag值资源版本表识）、If-Modified-Since(上次修改时间)</p>
+<p>浏览器中缓存1，利用http请求头 条件请求头 If-None-Match（etag值资源版本表识）、If-Modified-Since(上次修改时间)</p>
 
 <div>
   <div class="card">
